refactor: 로그 파싱 및 조회 기능 개선